2004-10-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.[ch]: remove unused function.
	* gedit2.c: prepend and reverse the list of docs.

2004-10-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit-plugins-engine.c: speedup: prepend to the list.

2004-10-25  Paolo Maggi  <paolo@gnome.org>

	* gedit-output-window.c (gedit_output_window_class_init): declares two 
	new signals (selection_changed and line_activated)
	(gedit_output_window_treeview_selection_changed): emits the "selection_changed"
	signal
	(gedit_output_window_treeview_row_activated): new function
	(gedit_output_window_init): connect to the needed signals
	(gedit_output_window_prepend_line): new function
	(gedit_output_window_set_selection_mode): ditto
	(gedit_output_window_get_selection_mode): ditto
	(gedit_output_window_get_selected_lines): ditto

	* gedit-output-window.h: adds new methods and signals

2004-10-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c: remove insert_text_at_cursor.

2004-10-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c:
	* gedit-file.c:
	* gedit-utils.[ch]: remove more eel functions.

2004-10-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file-selector-util.c: always return uris.
	* gedit-file.c: code cleanup.
	* gedit-recent.[ch]: factor out add/remove functions.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c: remove two more functions now that
	plugins do not use them anymore.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c: remove unused vars and unused func.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c: use gtk_text_buffer_set_text instead
	of rewriting it bad.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-plugins-engine.c: cleanup.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.[ch]: remove wrappers for line_count and char_count.
	* gedit-document-server.c: update for the above.
	* gedit-print.c: ditto.
