@@ -1,3 +1,7 @@
+2004-10-28  Paolo Borelli  <pborelli@katamail.com>
+
+	* shell_output/shell_output.c: eel removal.
+
 2004-10-17  Paolo Borelli  <pborelli@katamail.com>
 
 	* shell_output/shell_output.c: use proper help section.
