@@ -1,3 +1,11 @@
+2004-10-28  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-utils.[ch]
+	* gedit-document.c:
+	* gedit-file.c:
+
+	More eel removal: move uri_get_basename to utils.
+
 2004-10-27  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-document.[ch]: remove unused function.
